tests/snapshots/poetry__complete_workflow-2.snap
---
source: tests/poetry.rs
expression: "fs::read_to_string(project_path.join(\"pyproject.toml\")).unwrap()"
---
[project]
name = "foo"
version = "0.0.1"
requires-python = "~=3.11"
dependencies = ["arrow>=1.2.3,<2"]

[dependency-groups]
dev = ["factory-boy>=3.2.1,<4"]
typing = ["mypy>=1.13.0,<2"]

[tool.uv]
package = false
default-groups = [
    "dev",
    "typing",
]
