tests/snapshots/poetry__dry_run_minimal.snap
---
source: tests/poetry.rs
info:
  program: migrate-to-uv
  args:
    - tests/fixtures/poetry/minimal
    - "--dry-run"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Migrated pyproject.toml:
[project]
name = "foobar"
version = "0.0.1"

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true
